<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<ImageView
            android:id="@+id/iv_details_screen_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_movie_poster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/inception_poster_med"/>-->

        <TextView
            android:id="@+id/tv_details_screen_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp"
            android:fontFamily="sans-serif"
            android:layout_marginStart="@dimen/padding_start_end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Real Long is the Movie Name"/>

        <TextView
            android:id="@+id/tv_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_16sp"
            android:fontFamily="sans-serif"
            android:text="@string/string_rating"
            android:layout_marginTop="@dimen/padding_top_16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_screen_movie_title"
            app:layout_constraintLeft_toLeftOf="@+id/tv_details_screen_movie_title" />

        <TextView
            android:id="@+id/tv_movie_details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large_42sp"
            android:fontFamily="sans-serif"
            app:layout_constraintLeft_toLeftOf="@+id/tv_rating_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_text"
            tools:text="@string/rating_test"/>

        <TextView
            android:id="@+id/tv_movie_details_ratings_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_16sp"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_rating"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_details_rating"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/number_of_ratings_test"/>

        <TextView
            android:id="@+id/tv_movie_release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_16sp"
            android:fontFamily="sans-serif"
            android:text="@string/release_date_text"
            android:layout_marginTop="@dimen/padding_top_16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_ratings_count"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_details_ratings_count"/>

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date_text"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_release_date_text"
            tools:text="@string/movie_release_date_test"/>

    </android.support.constraint.ConstraintLayout>
</layout>