<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|enterAlways"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/layout_action_bar"
            layout="@layout/action_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_themovieDB_logo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="@dimen/padding_start_end"
                    android:layout_marginRight="@dimen/padding_start_end"
                    android:layout_marginTop="@dimen/padding_top_16dp"
                    android:contentDescription="@string/content_description_the_moviedb_logo"
                    app:srcCompat="@drawable/ic_themoviedb_primary_green_icon" />

                <TextView
                    android:id="@+id/tv_the_moviedb_attribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_movie_db_attribution"
                    android:textSize="@dimen/text_size_small_16sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginLeft="@dimen/padding_start_end"
                    android:layout_marginRight="@dimen/padding_start_end"
                    android:layout_marginTop="@dimen/padding_top_16dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_picasso_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_start_end"
                android:layout_marginRight="@dimen/padding_start_end"
                android:layout_marginTop="@dimen/padding_top_16dp"
                android:fontFamily="sans-serif"
                android:autoLink="web"
                android:text="@string/picasso_lisence"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small_16sp" />

            <TextView
                android:id="@+id/tv_application_github_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_start_end"
                android:layout_marginRight="@dimen/padding_start_end"
                android:layout_marginTop="@dimen/padding_top_16dp"
                android:fontFamily="sans-serif"
                android:autoLink="web"
                android:text="@string/application_github_link"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small_16sp" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>